stopped right menu collapsing on the archive page. closes gitterHQ/gitter#460

--- a/public/js/views/righttoolbar/rightToolbarView.less
+++ b/public/js/views/righttoolbar/rightToolbarView.less
@@ -63,9 +63,6 @@
   }
 
   @media @mid {
-    width: 70px;
-    padding-right: 0px;
-
     &.expand {
       width: @rightMarginFull;
     }
@@ -117,6 +114,13 @@
     h1 {
       word-wrap: break-word;
     }
+  }
+}
+
+.right-toolbar--collapsible {
+  @media @mid {
+    width: 70px;
+    padding-right: 0px;
   }
 }
 
